Added burrow option to AutoCity