@@ -19,6 +19,7 @@ import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.Vec3d;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -30,6 +31,7 @@ import static dev.tigr.ares.fabric.impl.modules.player.PacketMine.MINER;
 @Module.Info(name = "AutoCity", description = "Automatically mines closest players surround", category = Category.COMBAT)
 public class AutoCity extends Module {
     private final Setting<Boolean> instant = register(new BooleanSetting("Instant", true));
+    private final Setting<Boolean> burrow = register(new BooleanSetting("Mine Burrow First", true));
     private final Setting<Boolean> oneDotThirteen = register(new BooleanSetting("1.13+", true));
     public final Setting<Boolean> skipQueue = register(new BooleanSetting("Skip Mine Queue", false));
 
@@ -45,10 +47,12 @@ public class AutoCity extends Module {
         for(Entity playerEntity: WorldUtils.getPlayerTargets(MC.interactionManager.getReachDistance() +2)) {
             Vec3d posVec = playerEntity.getPos();
             BlockPos pos = new BlockPos(Math.floor(posVec.x), Math.floor(posVec.y), Math.floor(posVec.z));
-            if(inCity(pos)) {
+            if(inCity(pos) || (burrow.getValue() && inBurrow(pos))) {
                 // find block
-                List<BlockPos> blocks = Arrays.asList(pos.north(), pos.east(), pos.south(), pos.west());
+                List<BlockPos> blocks = new ArrayList<>(List.of(pos.north(), pos.east(), pos.south(), pos.west()));
                 blocks.sort(Comparators.blockDistance);
+                if(burrow.getValue()) blocks.add(0, pos);
+
                 BlockPos target = null;
                 for(BlockPos block: blocks) {
                     Vec3d closest = MathUtils.getClosestPointOfBlockPos(SelfUtils.getEyePos(), block);
@@ -96,7 +100,11 @@ public class AutoCity extends Module {
             InstantMine.INSTANCE.setEnabled(false);
         }
     }
-    
+
+    private boolean inBurrow(BlockPos pos) {
+        return allBlocks(pos);
+    }
+
     private boolean inCity(BlockPos pos) {
         return allBlocks(pos.north(), pos.east(), pos.south(), pos.west());
     }
@@ -111,6 +119,8 @@ public class AutoCity extends Module {
     }
 
     private boolean shouldBreakCheck(BlockPos pos, BlockPos target) {
+        if(burrow.getValue() && pos.equals(target))
+            return !MC.world.getBlockState(pos).getMaterial().isReplaceable();
         if(oneDotThirteen.getValue()) return true;
         else if(MC.world.getBlockState(pos.up()).isAir()) return true;
         else if(pos.equals(target.north())) {
